# NPatch

./: .gitmodules  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: build-microg.yml  build.yml  export-keystore.yml
apkzlib/: build.gradle.kts
gradle/: lspatch.versions.toml
manager/: proguard-rules.pro
manager/src/main/: AndroidManifest.xml
manager/src/main/java/nkbe/util/: NPackageManager.kt
manager/src/main/java/org/lsposed/npatch/: LSPApplication.kt  Patcher.kt
manager/src/main/java/org/lsposed/npatch/config/: ConfigManager.kt  Configs.kt
manager/src/main/java/org/lsposed/npatch/manager/: AppBroadcastReceiver.kt  BootCompletedReceiver.kt  ConfigProvider.kt  KeepAliveService.kt  MiPushFallbackReceiver.kt  MirrorSyncManager.kt
manager/src/main/res/values/: strings.xml
meta-loader/: proguard-rules.pro
meta-loader/src/main/java/org/lsposed/npatch/metaloader/: NPatchDataProvider.java
patch/: build.gradle.kts
patch-loader/src/main/java/org/lsposed/npatch/loader/: GmsRedirector.java  LSPApplication.java  LSPLoader.java  OriginApkHelper.java  SigBypass.java
patch-loader/src/main/jni/: CMakeLists.txt
patch-loader/src/main/jni/include/: npatch_compat.h
patch-loader/src/main/jni/include/art/runtime/: oat_file_manager.h
patch-loader/src/main/jni/src/: config_impl.h  patch_loader.cpp  patch_loader.h
patch-loader/src/main/jni/src/jni/: bypass_sig.cpp  bypass_sig.h  bypass_svc.cpp  bypass_svc.h
patch/src/main/java/org/lsposed/patch/: DexGmsRedirect.java  NPatch.java
(+10 files in other folders)
